--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,7 +5,10 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
-                        <div class="alert alert-warning alert-dismissible fade show" role="alert"
+
+                        <div class="alert alert
+                         {% if messages %} alert-succes {% else %} alert-warning {% endif %}
+                         alert-dismissible fade show" role="alert"
                              style="margin-top: 50px;">
                             <strong>Holy guacamole!</strong> You should check in on some of those fields below.
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
